<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="bmiScore"
            type="String" />

        <variable
            name="weightStatus"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.view.BmiFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/bmi_CV"
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="60dp"
            android:clickable="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/bmi_calculator_label" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutWeight"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/right_left_margins_for_tv"
                    android:layout_marginTop="@dimen/top_margin"
                    android:layout_marginEnd="@dimen/right_left_margins_for_tv"
                    android:hint="@string/weight_edit_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextWeight"
                        style="@style/Widget.Material3.TextInputEditText.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutHeight"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/right_left_margins_for_tv"
                    android:layout_marginTop="@dimen/top_margin"
                    android:layout_marginEnd="@dimen/right_left_margins_for_tv"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/height_edit_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextHeight"
                        style="@style/Widget.Material3.TextInputEditText.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calculate_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginEnd="60dp"
            android:text="@string/calculate_button" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/result_bmi_CV"
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="60dp"
            android:clickable="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/bmi_result_label" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="@dimen/top_margin"
                    android:layout_marginEnd="30dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/bmi_label" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/top_margin"
                            android:layout_marginBottom="@dimen/bottom_margin"
                            android:text="@{bmiScore != null ? @string/bmi_score(bmiScore) : @string/empty_field}" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/status_label" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/top_margin"
                            android:layout_marginBottom="@dimen/bottom_margin"
                            android:text="@{weightStatus != null ? @string/string_score(weightStatus) : @string/empty_field}" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</layout>