<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:radius="10" />

        <TextView
            android:id="@+id/current_sleep"
            style="@style/MyTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bar_chart" />

        <TextView
            android:id="@+id/beginning_of_sleepTV"
            style="@style/MyTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:text="@string/beginning_of_sleep_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_sleep" />

        <LinearLayout
            android:id="@+id/beginning_of_sleepLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beginning_of_sleepTV">

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/textInputLayoutStartHours"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_start_LL"
                android:hint="@string/sleep_fragment_enter_hours">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextStartHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/textInputLayoutStartMinutes"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:hint="@string/sleep_fragment_enter_minutes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextStartMinutes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/ending_of_sleepTV"
            style="@style/MyTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:text="@string/ending_of_sleep_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beginning_of_sleepLL" />

        <LinearLayout
            android:id="@+id/ending_of_sleepLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ending_of_sleepTV">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEndHours"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_start_LL"

                android:hint="@string/sleep_fragment_enter_hours">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextEndHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/textInputLayoutEndMinutes"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:hint="@string/sleep_fragment_enter_minutes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextEndMinutes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/set_sleep_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:text="@string/set_sleep_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ending_of_sleepLL" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>