<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.projects.minifitnesstracker.viewmodel.MainViewModel" />

        <variable
            name="glassesOfWater"
            type="int" />

        <variable
            name="stepsWalked"
            type="String" />

        <variable
            name="stepsGoal"
            type="String" />

        <variable
            name="percentageOfGoal"
            type="int" />

        <import type="kotlin.Pair" />

        <variable
            name="amountOfSleep"
            type="Pair&lt;Integer, Integer&gt;" />
    </data>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.MainFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/steps_CV"
                style="?attr/materialCardViewElevatedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin_CV"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        android:orientation="vertical"
                        android:paddingStart="@dimen/padding_start_LL"
                        android:paddingEnd="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:text="@string/steps_label"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/amount_of_steps_TV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="10dp"
                            android:text="@{@string/steps_goal(stepsWalked, stepsGoal)}"
                            android:textSize="20sp" />


                        <TextView
                            style="?textAppearanceCaption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/all_steps_now_label" />


                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@{@string/percentage_of_steps(percentageOfGoal)}"
                            app:layout_constraintBottom_toTopOf="@+id/progress_bar"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/progress_bar" />

                        <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                            android:id="@+id/progress_bar"
                            android:layout_width="0dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="1dp"
                            android:layout_marginEnd="@dimen/layout_margin_end"
                            android:layout_weight="1"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:rcBackgroundColor="?attr/background_color"
                            app:rcBackgroundPadding="2dp"
                            app:rcMax="100"
                            app:rcProgress="0"
                            app:rcProgressColor="?attr/progress_color"
                            app:rcRadius="10dp" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/glasses_CV"
                style="?attr/materialCardViewElevatedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin_CV"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:orientation="vertical"
                        android:paddingStart="@dimen/padding_start_LL"
                        android:paddingEnd="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:text="@string/water_label"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/amount_of_glasses_TV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="10dp"
                            android:text="@{@string/amount_of_glasses(glassesOfWater)}"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/plus_button"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginEnd="@dimen/layout_margin_end"
                            android:background="@drawable/button_plus_ripple"
                            android:onClick="@{() -> viewModel.onPlusButtonClicked()}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/minus_button"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginEnd="25dp"
                            android:background="@drawable/button_minus_ripple"
                            android:onClick="@{() -> viewModel.onMinusButtonClicked()}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/plus_button"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/sleep_CV"
                style="?attr/materialCardViewElevatedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin_CV"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingStart="@dimen/padding_start_LL"
                        android:paddingEnd="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:gravity="top"
                            android:text="@string/sleep_label"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/sleep_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:layout_marginTop="10dp"
                            android:text="@{amountOfSleep != null ? @string/sleep_time(amountOfSleep.first, amountOfSleep.second) : @string/default_sleep_time}"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:src="@drawable/ic_moon" />


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/bmi_CV"
                style="?attr/materialCardViewElevatedStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="@dimen/layout_margin_CV"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="top"
                        android:text="@string/bmi_text"
                        android:textSize="20sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>
</layout>
